--- a/src/index.html
+++ b/src/index.html
@@ -57,5 +57,48 @@
             </div>
         </div>
     </div>
+
+    <section class="advantages">
+        <div class="container">
+            <h3 class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</h3>
+            <div class="advantages__wrapper">
+                <div class="advantages__icons">
+                    <div class="advantages__icon">
+                        <img src="icons/cup.png" alt="cup">
+                        <div class="advantages__text">
+                            Делимся опытом
+                        </div>
+                        <div class="advantages__descr">
+                            Наши сотрудники всегда готовы поделиться своим опытом,
+                            так как сами бегают полумарафоны, переплыли Босфор,
+                            готовятся к соревнованиям по триатлону!
+                        </div>
+                    </div>
+                    <div class="advantages__icon">
+                        <img src="icons/heart.png" alt="heart">
+                        <div class="advantages__text">
+                            Заботимся о здоровье
+                        </div>
+                        <div class="advantages__descr">
+                            Мы работаем для того,
+                            чтобы Ваши занятия спортом шли на пользу Вашему здоровью
+                            и были в радость Вам и Вашим близким!
+                        </div>
+                    </div>
+                    <div class="advantages__icon">
+                        <img src="icons/shoes.png" alt="shoes">
+                        <div class="advantages__text">
+                            Учим бегать
+                        </div>
+                        <div class="advantages__descr">
+                            Помогаем с обучением правильной технике бега! <br>
+                            Дружим с крупнейшей школой бега в России - 
+                            <span>I LOVE RUNNING.</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
