--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
                         <div class="advantages__descr">
                             Помогаем с обучением правильной технике бега! <br>
                             Дружим с крупнейшей школой бега в России - 
-                            <span>I LOVE RUNNING.</span>
+                            <a href="#">I LOVE RUNNING.</a>
                         </div>
                     </div>
                 </div>
