--- a/src/index.html
+++ b/src/index.html
@@ -60,12 +60,12 @@
 
     <section class="advantages">
         <div class="container">
-            <h3 class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</h3>
+            <h2 class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantages__wrapper">
-                <div class="advantages__icons">
+                <div class="advantages__item">
                     <div class="advantages__icon">
                         <img src="icons/cup.png" alt="cup">
-                        <div class="advantages__text">
+                        <div class="advantages__subtitle">
                             Делимся опытом
                         </div>
                         <div class="advantages__descr">
@@ -76,7 +76,7 @@
                     </div>
                     <div class="advantages__icon">
                         <img src="icons/heart.png" alt="heart">
-                        <div class="advantages__text">
+                        <div class="advantages__subtitle">
                             Заботимся о здоровье
                         </div>
                         <div class="advantages__descr">
@@ -87,7 +87,7 @@
                     </div>
                     <div class="advantages__icon">
                         <img src="icons/shoes.png" alt="shoes">
-                        <div class="advantages__text">
+                        <div class="advantages__subtitle">
                             Учим бегать
                         </div>
                         <div class="advantages__descr">
