--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
                 <li class="catalog__tab"><div>для триатлона</div></li>
             </ul>
 
-            <div class="catalog__content">
+            <div class="catalog__content catalog__content_active">
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
@@ -333,13 +333,13 @@
             <div class="catalog__content">
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
-                        <div class="catalog-item__content">
+                        <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/watch_tab.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT4</div>
                             <div class="catalog-item__descr">Улучшенная версия Polar FT1, имеющая следующие улучшения:</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
-                        <ul class="catalog-item__list catalog-item__list_active">
+                        <ul class="catalog-item__list">
                             <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
                             </li>
                             <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
@@ -364,13 +364,13 @@
             <div class="catalog__content">
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
-                        <div class="catalog-item__content">
+                        <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/watch_tab.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT4</div>
                             <div class="catalog-item__descr">Улучшенная версия Polar FT1, имеющая следующие улучшения:</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
-                        <ul class="catalog-item__list catalog-item__list_active">
+                        <ul class="catalog-item__list">
                             <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
                             </li>
                             <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
@@ -393,13 +393,13 @@
                 </div>
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
-                        <div class="catalog-item__content">
+                        <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/watch_tab.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT4</div>
                             <div class="catalog-item__descr">Улучшенная версия Polar FT1, имеющая следующие улучшения:</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
-                        <ul class="catalog-item__list catalog-item__list_active">
+                        <ul class="catalog-item__list">
                             <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
                             </li>
                             <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
@@ -418,6 +418,56 @@
                             <div class="catalog-item__price">7 021 руб.</div>
                         </div>
                         <button class="button button_mini">КУПИТЬ</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="feedback">
+        <div class="container">
+            <h2 class="title">отзывы клиентов</h2>
+            <div class="feedback-item">
+                <div class="feedback-item__wrapper">
+                    <img src="img/irina.svg" alt="irina" class="feedback-item__img">
+                    <div class="feetback-item__content">
+                        <div class="feedback-item__subtitle">Ирина Иванченко</div>
+                        <span>2 полумарафона</span>
+                        <div class="feedback-item__descr">
+                            Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.<br>
+                            <br>
+                            Новые цели - новый гаджет!<br>
+                            <br>
+                            Спасибо, RunSmart!
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="feedback-item__wrapper">
+                    <img src="img/ivan.svg" alt="irina" class="feedback-item__img">
+                    <div class="feetback-item__content">
+                        <div class="feedback-item__subtitle">Иван Сёмочкин</div>
+                        <span>1 полумарафон</span>
+                        <div class="feedback-item__descr">
+                            Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал.Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.
+                            <br>
+                            С ними подготовился к своему первому полумарафону! Спасибо!!!
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="feedback-item__wrapper">
+                    <img src="img/julia.svg" alt="irina" class="feedback-item__img">
+                    <div class="feetback-item__content">
+                        <div class="feedback-item__subtitle">Юлия Дашкина</div>
+                        <span>2 полумарафона</span>
+                        <div class="feedback-item__descr">
+                            Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.
+                            <br>
+                            Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!
+                            <br>
+                            Спасибо!!!
+                        </div>
                     </div>
                 </div>
             </div>
