--- a/src/index.html
+++ b/src/index.html
@@ -449,7 +449,7 @@
                         <div class="feedback-item__subtitle">Иван Сёмочкин</div>
                         <span>1 полумарафон</span>
                         <div class="feedback-item__descr">
-                            Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал.Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.
+                            Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал.Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.<br>
                             <br>
                             С ними подготовился к своему первому полумарафону! Спасибо!!!
                         </div>
@@ -462,9 +462,9 @@
                         <div class="feedback-item__subtitle">Юлия Дашкина</div>
                         <span>2 полумарафона</span>
                         <div class="feedback-item__descr">
-                            Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.
+                            Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.<br>
                             <br>
-                            Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!
+                            Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!<br>
                             <br>
                             Спасибо!!!
                         </div>
